# OmegaESP32xxI2CController

./: CMakeLists.txt
inc/: OmegaESP32I2CController.h  OmegaESP32xxI2CController.h
src/: OmegaESP32xxI2CController.c
